--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 }
 
 .grey-back {
-    background-color: var(--grey-back) !important;
+    background-color: var(--grey-color) !important;
     backdrop-filter: blur(5px);
 }
 
